# gitarch

./: AGENTS.md  Cargo.toml  README.md
src/: analysis.rs  cli.rs  main.rs  output.rs  repo.rs
src/analysis/: coupling.rs  decay.rs  derived.rs  health.rs  metrics.rs  ownership.rs
