[package]
name = "gitarch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.44", features = ["serde"] }
clap = {version = "4.5.56", features = ["derive"]}
cliux = "0.5.1"
git2 = "0.20.3"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
